--- a/Web App/views/pages/register.ejs
+++ b/Web App/views/pages/register.ejs
@@ -6,9 +6,9 @@
         <label>Password</label>
         <input type="password" id="password" name="password" required><br>
         <label>First Name</label>
-        <input type="text" id="Firstname" name="Firstname" required><br>
+        <input type="text" id="Firstname" name="firstName" required><br>
         <label>Last Name</label>
-        <input type="text" id="Lastname" name="Lastname" required><br>
+        <input type="text" id="Lastname" name="lastName" required><br>
         <input type="submit" value="Register">
     </form>
 
