--- a/Web App/views/pages/location.ejs
+++ b/Web App/views/pages/location.ejs
@@ -112,7 +112,7 @@
             }
             if(item.distance) {
                 const distance = document.createElement("p");
-                distance.textContent = `Distance: ${item.distance.toFixed(2)} km`;
+                distance.textContent = `Distance: ${item.distance.toFixed(2)} m`;
                 slideDiv.appendChild(distance);
             }
             if(item.category && item.category.length > 0) {
