--- a/Web App/views/partials/header.ejs
+++ b/Web App/views/partials/header.ejs
@@ -14,6 +14,12 @@
 
     <% } %>
     <script src="NavBar.js" defer></script>
+    
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      referrerpolicy="no-referrer" />
+
+
 
     <link rel="stylesheet" href="/style.css">
 
